// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toggleGroup > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <fieldset
        class="styles__l0r03j0"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.75rem_xxsmall__toi52u5p"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <legend
              class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1rem_xxsmall__toi52u3v"
          >
            <label
              aria-disabled="false"
              class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
              for="_r_2_"
            >
              <div
                class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
              >
                <div
                  class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
                  style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
                >
                  <span
                    class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                    for="_r_2_"
                  >
                    Toggle 1
                  </span>
                </div>
              </div>
              <div
                class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__adn1w28"
                  id="_r_2_"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
              for="_r_6_"
            >
              <div
                class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
              >
                <div
                  class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
                  style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
                >
                  <span
                    class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                    for="_r_6_"
                  >
                    Toggle 2
                  </span>
                </div>
              </div>
              <div
                class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__adn1w28"
                  id="_r_6_"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`toggleGroup > renders correctly with direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <fieldset
        class="styles__l0r03j0"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.75rem_xxsmall__toi52u5p"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <legend
              class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_gap_1rem_xxsmall__toi52u3v"
          >
            <label
              aria-disabled="false"
              class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
              for="_r_c_"
            >
              <div
                class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
              >
                <div
                  class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
                  style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
                >
                  <span
                    class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                    for="_r_c_"
                  >
                    Toggle 1
                  </span>
                </div>
              </div>
              <div
                class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__adn1w28"
                  id="_r_c_"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
              for="_r_g_"
            >
              <div
                class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
              >
                <div
                  class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
                  style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
                >
                  <span
                    class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                    for="_r_g_"
                  >
                    Toggle 2
                  </span>
                </div>
              </div>
              <div
                class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__adn1w28"
                  id="_r_g_"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`toggleGroup > renders correctly with error content 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <fieldset
        aria-describedby="_r_v_"
        class="styles__l0r03j0"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.75rem_xxsmall__toi52u5p"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <legend
              class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1rem_xxsmall__toi52u3v"
          >
            <label
              aria-disabled="false"
              class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
              for="_r_11_"
            >
              <div
                class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
              >
                <div
                  class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
                  style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
                >
                  <span
                    class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                    for="_r_11_"
                  >
                    Toggle 1
                  </span>
                </div>
              </div>
              <div
                class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_true__adn1w24 styles_size_large__adn1w25"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="true"
                  class="styles__adn1w28"
                  id="_r_11_"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
              for="_r_15_"
            >
              <div
                class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
              >
                <div
                  class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
                  style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
                >
                  <span
                    class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                    for="_r_15_"
                  >
                    Toggle 2
                  </span>
                </div>
              </div>
              <div
                class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_true__adn1w24 styles_size_large__adn1w25"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="true"
                  class="styles__adn1w28"
                  id="_r_15_"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
      <span
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
        id="_r_v_"
      >
        Eror content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`toggleGroup > renders correctly with helper content 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <fieldset
        aria-describedby="_r_k_"
        class="styles__l0r03j0"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.75rem_xxsmall__toi52u5p"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <legend
              class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1rem_xxsmall__toi52u3v"
          >
            <label
              aria-disabled="false"
              class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
              for="_r_m_"
            >
              <div
                class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
              >
                <div
                  class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
                  style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
                >
                  <span
                    class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                    for="_r_m_"
                  >
                    Toggle 1
                  </span>
                </div>
              </div>
              <div
                class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__adn1w28"
                  id="_r_m_"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
              for="_r_q_"
            >
              <div
                class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
              >
                <div
                  class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
                  style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
                >
                  <span
                    class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                    for="_r_q_"
                  >
                    Toggle 2
                  </span>
                </div>
              </div>
              <div
                class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__adn1w28"
                  id="_r_q_"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
      <span
        class="style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
        id="_r_k_"
      >
        Helper content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`toggleGroup > renders correctly with required prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <fieldset
        class="styles__l0r03j0"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.75rem_xxsmall__toi52u5p"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <div
              class="styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.25rem_xxsmall__toi52u5j"
            >
              <legend
                class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              >
                Label
              </legend>
              <span
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
              >
                *
              </span>
            </div>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1rem_xxsmall__toi52u3v"
          >
            <label
              aria-disabled="false"
              class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
              for="_r_1d_"
            >
              <div
                class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
              >
                <div
                  class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
                  style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
                >
                  <span
                    class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                    for="_r_1d_"
                  >
                    Toggle 1
                  </span>
                </div>
              </div>
              <div
                class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__adn1w28"
                  id="_r_1d_"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
              for="_r_1h_"
            >
              <div
                class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
              >
                <div
                  class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
                  style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
                >
                  <span
                    class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                    for="_r_1h_"
                  >
                    Toggle 2
                  </span>
                </div>
              </div>
              <div
                class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__adn1w28"
                  id="_r_1h_"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;
